	- Fixed Satellite Screen from bricking MP games
	- Albania no longer gets spammed on startup with USA Events
	- Corrected Counter Terror events no longer showing the removal of values
	- Fixed Germany volkswagen focuses
	- Fixed scientific advances idea for generic tree
	- Fixed French Canadian Happiness in 2017 (now Canada should have only 1 idea about Happiness)
	- Some fixes for Greek content

Content:
	- Majors are now at the top of the list of game rules
	- Nationalist Germany now can claim Liechtenstein
	- Added initial missile stockpile to ITA
	- Significant updates to the Italian tree and starting political situation
	- Rework of the italian political branch with the introduction of a policy system based on decisions instead of focuses
	- Added several additional generic focus tree (Some small content additions)
	- Generic Focus Tree Corruption Focus
	- Restructured Brazil and Vietnam Navy
	- Improved Influence GUI Localization in tooltips
	- Russia's Putin Path slightly improved
	- EU map mode now has unique colors for office holders
	- Norway no longer has just the shit tree
	- Tank Designer Compatibility
	- Full Naval System Redesign

Focus Trees:
	- Added search filters to the Finnish tree

Modding:
	- Added new modifiers for propaganda campaign cost modifiers
	- Added new modifiers for economic project cost modifiers

Performance:
	- Implemented dirty variables to several scripted GUIs to improve runtime
	- Missiles now have a dirty variable optimizing runtime
	- Implemented dirty variables to Money UIs

v1.6.3
AI:
	- Investment AI will no longer offer you projects that exceed 730 days
	- Disabled Anti Bully Decisions for AI (They didn't use it anyways)
	- Armenian/Azerbaijan Hostile Relations added
	- Armenia will try and protect Artaskh
	- Tweaked the ability for the AI to build offices
	- Expanded their desire for industrial strength above all (Should build up longer)