@@ -60,7 +60,7 @@ ideas = {
 
 		british_special_treatment = {
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea british_special_treatment" }
-			picture = british_exceptionalism
+			picture = british_imperialism
 
 			modifier = {
 				political_power_gain = -0.1
@@ -109,7 +109,7 @@ ideas = {
 
 		ENG_imperialistic_ambitions = {
 			on_add = { log = "[GetDateText]: [Root.GetName]: add idea ENG_imperialistic_ambitions" }
-			picture = british_exceptionalism
+			picture = british_imperialism
 
 			modifier = {
 				justify_war_goal_time = -0.1
