@@ -7878,3 +7878,15 @@ pol_distance_matrix_23 = {
 			set_variable = { pol_distance_current = 0.3 }
 	}
 }
+
+# Add Coalition Member
+# set_temp_variable = { add_col_one = 0-23 } -- Required
+add_coalition_members_effect = {
+	custom_effect_tooltip = add_coalition_members_effect_TT
+	add_to_array = { gov_coalition_array = add_col_one }
+}
+
+remove_coalition_members_effect = {
+	custom_effect_tooltip = remove_coalition_members_effect_TT
+	remove_from_array = { gov_coalition_array = remove_col_one }
+}
