@@ -1,112 +1,5 @@
-
-#### campaign costs ####
-
-defined_text = {
-	name = variable_cost
-
-	text = {
-		trigger = {
-			check_variable = { num_of_factories < 4 }
-		}
-	   localization_key = cost_num_of_factories_3
-	}
-	text = {
-		trigger = {
-			check_variable = { num_of_factories > 3 }
-			check_variable = { num_of_factories < 8 }
-		}
-	   localization_key = cost_num_of_factories_8
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 7 }
-				check_variable = { num_of_factories < 16 }
-		}
-	   localization_key = cost_num_of_factories_16
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 15 }
-				check_variable = { num_of_factories < 26 }
-		}
-	   localization_key = cost_num_of_factories_26
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 25 }
-				check_variable = { num_of_factories < 39 }
-		}
-	   localization_key = cost_num_of_factories_39
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 38 }
-				check_variable = { num_of_factories < 54 }
-		}
-	   localization_key = cost_num_of_factories_54
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 53 }
-				check_variable = { num_of_factories < 82 }
-		}
-	   localization_key = cost_num_of_factories_82
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 81 }
-				check_variable = { num_of_factories < 120 }
-		}
-	   localization_key = cost_num_of_factories_120
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 119 }
-				check_variable = { num_of_factories < 164 }
-		}
-	   localization_key = cost_num_of_factories_164
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 163 }
-				check_variable = { num_of_factories < 250 }
-		}
-	   localization_key = cost_num_of_factories_250
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 249 }
-				check_variable = { num_of_factories < 370 }
-		}
-	   localization_key = cost_num_of_factories_370
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 369 }
-				check_variable = { num_of_factories < 500 }
-		}
-	   localization_key = cost_num_of_factories_500
-	}
-	text = {
-		trigger = {
-				check_variable = { num_of_factories > 499 }
-		}
-	   localization_key = cost_num_of_factories_1000
-	}
-}
-
 #### buttons to manipulate politics ###
-
 #party_0 - attack and boost buttons are mutually exclusive
-
-
-
-
-
-
-
-
-
 defined_text = {
    name = select_party1_boost_button
 
@@ -14124,4 +14017,80 @@ defined_text = {
 	name = ban_party_cost
 	text = { trigger = { has_elections = no } localization_key = political_power_minus_10 }
 	text = { localization_key = political_power_minus_100 }
+}
+
+defined_text = {
+	name = add_coalition_scl
+	text = { trigger = { check_variable = { add_col_one = 0 } }
+	   localization_key = "[Western_Autocracy_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 1 } }
+	   localization_key = "[conservatism_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 2 } }
+	   localization_key = "[liberalism_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 3 } }
+	   localization_key = "[socialism_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 4 } }
+	   localization_key = "[Communist-State_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 5 } }
+	   localization_key = "[anarchist_communism_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 6 } }
+	   localization_key = "[Conservative_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 7 } }
+	   localization_key = "[Autocracy_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 8 } }
+	   localization_key = "[Mod_Vilayat_e_Faqih_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 9 } }
+	   localization_key = [Vilayat_e_Faqih_L]
+	}
+	text = { trigger = { check_variable = { add_col_one = 10 } }
+	   localization_key = "[Kingdom_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 11 } }
+	   localization_key = "[Caliphate_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 12 } }
+	   localization_key = "[Neutral_Muslim_Brotherhood_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 13 } }
+	   localization_key = "[Neutral_Autocracy_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 14 } }
+	   localization_key = "[Neutral_conservatism_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 15 } }
+	   localization_key = "[oligarchism_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 16 } }
+	   localization_key = "[Neutral_Libertarian_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 17 } }
+	   localization_key = "[Neutral_green_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 18 } }
+	   localization_key = [neutral_Social_L]
+	}
+	text = { trigger = { check_variable = { add_col_one = 19 } }
+	   localization_key = "[Neutral_Communism_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 20 } }
+	   localization_key = "[Nat_Populism_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 21 } }
+	   localization_key = "[Nat_Fascism_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 22 } }
+	   localization_key = "[Nat_Autocracy_L]"
+	}
+	text = { trigger = { check_variable = { add_col_one = 23 } }
+	   localization_key = "[Monarchist_L]"
+	}
 }
