@@ -1009,9 +1009,9 @@ leader_traits = {
 	skilled_staffer = {
 		type = corps_commander
 		gain_xp = {
-			check_variable = { num_units > 23 }
+			check_variable = { num_units > 17 }
 		}
-		custom_gain_xp_trigger_tooltip = fighting_with_at_least_23_units
+		custom_gain_xp_trigger_tooltip = fighting_with_at_least_18_units
 		cost = 2000
 		logistics_skill_factor = 2
 		corps_commander_modifier = {
