@@ -230,7 +230,7 @@ upgrades = { ##FIXME: Finish LandUpgrades -- work on improving the UI platform f
 			cost_by_level_for_licensed_equipment = 2
 		}
 
-		level_requirements = { }
+		# level_requirements = { }
 
 		resource_cost_thresholds = { # resource values defined here are TOTAL added cost, not cumulative
 			4 = { #more armor requires more resources
