@@ -255,20 +255,6 @@
  rebuild_bosphorus_strait_desc: "The Bosphorus has been blocked by a massive ship wreckage and need considerable time to clear up."
 
  propaganda_campaign_costs_tt: "Additional Expenses: §R0.10%§! of GDP\n"
- treasury_loss_project_TT: "Project Cost: §HTreasury§! §R-$[variable_cost]§! billions"
- cost_num_of_factories_3: "0.05"
- cost_num_of_factories_8: "0.1"
- cost_num_of_factories_16: "0.2"
- cost_num_of_factories_26: "0.35"
- cost_num_of_factories_39: "0.5"
- cost_num_of_factories_54: "0.75"
- cost_num_of_factories_82: "1"
- cost_num_of_factories_120: "1.5"
- cost_num_of_factories_164: "2.5"
- cost_num_of_factories_250: "4"
- cost_num_of_factories_370: "5.5"
- cost_num_of_factories_500: "7.5"
- cost_num_of_factories_1000: "10"
 
  ##### Government Coalition ####
  coalition_countdown: "Form New Government"
