@@ -145,3 +145,4 @@
  Pro_Western: "Pro Western"
  Fighter: "Fighter"
  Reformer: "Reformer"
+ fighting_with_at_least_18_units: "Currently Commanding More than 17 units\n"
