@@ -37,7 +37,8 @@
  modify_international_investment_effect_tt: "[THIS.GetName] §YInternational Investments§!: $$[?int_investment_change|+] Billion\n"
  modify_corporate_tax_rate_tt: "[THIS.GetName] §YCorporate Tax Rate§! changes by [?corp_change|+0] (Current: [?THIS.corporate_tax_rate|Y0])\n"
  modify_population_tax_rate_tt: "[THIS.GetName] §YPopulation Tax Rate§! changes by [?pop_change|+0] (Current: [?THIS.population_tax_rate|Y0])\n"
-
+ add_coalition_members_effect_TT: "§Y[add_coalition_scl]§! is added to our Ruling Coalition.\n"
+ remove_coalition_members_effect_TT: "§Y[add_coalition_scl]§! is removed from our Ruling Coalition.\n"
  10_percent_government_coalition_strength_tt: "Current §YGovernment Popularity§! > §Y10%§! (Current: [?government_coalition_strength|%1])"
  20_percent_government_coalition_strength_tt: "Current §YGovernment Popularity§! > §Y20%§! (Current: [?government_coalition_strength|%1])"
  30_percent_government_coalition_strength_tt: "Current §YGovernment Popularity§! > §Y30%§! (Current: [?government_coalition_strength|%1])"
