@@ -65,6 +65,8 @@ Bugfixes:
 	- Fixed scientific advances idea for generic tree
 	- Fixed French Canadian Happiness in 2017 (now Canada should have only 1 idea about Happiness)
 	- Some fixes for Greek content
+	- Skilled Staffer requires 18 or more units now to gain experience rather than 24
+	- Fixed missing icon for British Special Treatment
 
 Content:
 	- Majors are now at the top of the list of game rules
@@ -88,6 +90,7 @@ Focus Trees:
 Modding:
 	- Added new modifiers for propaganda campaign cost modifiers
 	- Added new modifiers for economic project cost modifiers
+	- Added new scripts for adding and removing coalition members at ease
 
 Performance:
 	- Implemented dirty variables to several scripted GUIs to improve runtime
